--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ argon2-cffi==23.1.0
 
 # Database
 sqlalchemy==2.0.28
+aiosqlite==0.19.0  # Using SQLite for development
 alembic==1.13.1
-psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 
 # External APIs and Services
@@ -31,3 +31,4 @@ matplotlib==3.8.3
 pytest==8.0.2
 httpx==0.27.0
 pytest-asyncio==0.23.5
+pytest-mock==3.12.0  # Added for mocking in tests
