--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ argon2-cffi==23.1.0
 
 # Database
 sqlalchemy==2.0.28
+psycopg2-binary==2.9.9
 aiosqlite==0.19.0  # Using SQLite for development
 alembic==1.13.1
 python-dotenv==1.0.1
@@ -32,3 +33,4 @@ pytest==8.0.2
 httpx==0.27.0
 pytest-asyncio==0.23.5
 pytest-mock==3.12.0  # Added for mocking in tests
+tenacity==8.2.3
