--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,8 @@ pytest-asyncio==0.23.5
 pytest-mock==3.12.0  # Added for mocking in tests
 tenacity==8.2.3
 aioresponses==0.7.8
+
+
+# Web Scraping and Automation
+selenium>=4.18.0
+webdriver-manager==4.0.1
