--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ google-search-results==2.4.2  # SerpAPI
 selenium==4.18.0
 beautifulsoup4==4.12.3
 requests==2.31.0
+aiohttp==3.9.3
 
 # Data Processing and Analysis
 numpy==1.26.4
